[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/car.png" type="Texture" id=1]
[ext_resource path="res://Car.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.14

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26, 63 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 48 )

[node name="Car" type="RigidBody2D"]
mass = 5.0
physics_material_override = SubResource( 1 )
contacts_reported = 100
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="FrontArea" type="Area2D" parent="CollisionShape2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/FrontArea"]
position = Vector2( 0, -112 )
shape = SubResource( 3 )

[node name="LeftArea" type="Area2D" parent="CollisionShape2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/LeftArea"]
position = Vector2( -48, -112 )
shape = SubResource( 3 )

[node name="RightArea" type="Area2D" parent="CollisionShape2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/RightArea"]
position = Vector2( 48, -112 )
shape = SubResource( 3 )

[connection signal="body_entered" from="CollisionShape2D/FrontArea" to="." method="_on_FrontArea_body_entered"]
[connection signal="body_exited" from="CollisionShape2D/FrontArea" to="." method="_on_FrontArea_body_exited"]
[connection signal="body_entered" from="CollisionShape2D/LeftArea" to="." method="_on_LeftArea_body_entered"]
[connection signal="body_exited" from="CollisionShape2D/LeftArea" to="." method="_on_LeftArea_body_exited"]
[connection signal="body_entered" from="CollisionShape2D/RightArea" to="." method="_on_RightArea_body_entered"]
[connection signal="body_exited" from="CollisionShape2D/RightArea" to="." method="_on_RightArea_body_exited"]
